--- a/app/src/main/res/layout/activity_choose_school.xml
+++ b/app/src/main/res/layout/activity_choose_school.xml
@@ -6,7 +6,47 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.jacks205.spots.activity.ChooseSchoolActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Welcome to Spots"
+        android:id="@+id/textView2"
+        android:textColor="@android:color/white"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Please choose a location."
+        android:id="@+id/textView3"
+        android:layout_below="@+id/textView2"
+        android:textColor="@android:color/white"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LET&apos;S GO"
+        android:id="@+id/button"
+        android:textSize="12dp"
+        android:textColor="@color/darkgray"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:background="@color/unselected"/>
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/schoolListView"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="45dp"
+        android:layout_above="@+id/button" />
 </RelativeLayout>
