Added image assets for selection screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,10 @@
     <color name="gray">#4BFFFFFF</color>
     <color name="lightwhite">#E0FFFFFF</color>
     <color name="lightgray">#6B21263C</color>
-    <color name="unselected">#FF32373F</color>
-    <color name="selected">#FF2DD681</color>
+    <color name="unselectedBtn">#FF32373F</color>
+    <color name="selectedBtn">#FF2DD681</color>
     <color name="darkgray">#1BFFFFFF</color>
+
+    <color name="textUnselectedGray">#25FFFFFF</color>
+
 </resources>
