--- a/app/src/main/res/layout/activity_choose_school.xml
+++ b/app/src/main/res/layout/activity_choose_school.xml
@@ -38,7 +38,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:background="@color/unselected"/>
+        android:background="@color/unselectedBtn"
+        android:onClick="letsGoOnClick"/>
 
     <ListView
         android:layout_width="wrap_content"
