Added fonts. Fixes #1

--- a/app/src/main/res/layout/piechart_list_item_2levels.xml
+++ b/app/src/main/res/layout/piechart_list_item_2levels.xml
@@ -41,7 +41,7 @@
             android:textSize="16dp"
             android:layout_marginBottom="6dp"
             android:gravity="center"
-            android:layout_above="@+id/textView"
+            android:layout_above="@+id/fullView"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentRight="true"
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="FULL"
-            android:id="@+id/textView"
+            android:id="@+id/fullView"
             android:background="@android:color/transparent"
             android:textColor="@color/lightgray"
             android:textSize="12dp"
