--- a/app/src/main/res/layout/activity_choose_school.xml
+++ b/app/src/main/res/layout/activity_choose_school.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Welcome to Spots"
-        android:id="@+id/textView2"
+        android:id="@+id/welcomeTextView"
         android:textColor="@android:color/white"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -21,8 +21,8 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Please choose a location."
-        android:id="@+id/textView3"
-        android:layout_below="@+id/textView2"
+        android:id="@+id/chooseLocationTextView"
+        android:layout_below="@+id/welcomeTextView"
         android:textColor="@android:color/white"
         android:layout_centerHorizontal="true" />
 
@@ -45,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/schoolListView"
-        android:layout_below="@+id/textView3"
+        android:layout_below="@+id/chooseLocationTextView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="45dp"
