Added CSUF resource and new single level views

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,5 +15,7 @@
         android:layout_centerHorizontal="true"
         android:divider="@color/dividerColor"
         android:dividerHeight="1dp"
+        android:paddingBottom="20dp"
+        android:clipToPadding="false"
         />
 </android.support.v4.widget.SwipeRefreshLayout>
