--- a/app/src/main/res/layout/activity_choose_school.xml
+++ b/app/src/main/res/layout/activity_choose_school.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.jacks205.spots.activity.ChooseSchoolActivity">
+    tools:context=".activity.ChooseSchoolActivity">
 
     <TextView
         android:layout_width="wrap_content"
